<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.myuser.detail.ManageUserFragment"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_38sdp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:background="@drawable/bg_circle"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_toolbar"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:tint="@color/colorPrimary"
        android:contentDescription="@string/title_content_description" />

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/title_manage_user"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toTopOf="@+id/cl_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:descendantFocusability="beforeDescendants"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_name"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="@dimen/_0sdp"
            app:boxStrokeWidthFocused="@dimen/_0sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:maxLength="20"
                android:singleLine="true"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/grey"
                android:paddingStart="@dimen/_24sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:hint="@string/title_input_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_role"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tl_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="@dimen/_0sdp"
            app:boxStrokeWidthFocused="@dimen/_0sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_role">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:maxLines="1"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/grey"
                android:singleLine="true"
                android:paddingStart="@dimen/_24sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:hint="@string/title_input_role"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_github"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tl_role"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="@dimen/_0sdp"
            app:boxStrokeWidthFocused="@dimen/_0sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_github">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/grey"
                android:maxLength="20"
                android:singleLine="true"
                android:paddingStart="@dimen/_24sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:hint="@string/title_input_github"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_53sdp"
            android:background="@drawable/bg_rounded_all_red"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24sdp"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/_53sdp"
            android:background="@drawable/bg_rounded_all_primary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_24ssp"
            app:layout_constraintStart_toEndOf="@+id/btn_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>