<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:background="@drawable/bg_rounded_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/title_field_empty"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/title_field_empty_des"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_popup" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_rounded_all_primary"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/title_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_positive"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_popup" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/bg_rounded_all_primary"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/title_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_negative"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_popup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>