<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.myuser.MyUserFragment"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/title_my_user"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toTopOf="@+id/cl_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:layout_marginTop="@dimen/_80sdp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/_16sdp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_margin="@dimen/_42sdp"
            app:layout_constraintTop_toTopOf="@+id/cl_toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/ic_empty"
                android:contentDescription="@string/title_content_description"/>

            <TextView
                android:id="@+id/tv_empty"
                android:text="@string/title_data_is_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_empty_des"
                android:text="@string/title_data_is_empty_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_24sdp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/title_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>