<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gituser.GitUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@drawable/bg_rounded_bottom"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="@dimen/_24sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_margin="@dimen/_24sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_rounded_all">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/title_content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16ssp"
                android:gravity="center_vertical"
                android:textColor="@color/colorTextSecondary"
                android:paddingTop="@dimen/_5sdp"
                android:hint="@string/title_hint_search_user"
                android:layout_marginStart="@dimen/_8sdp"
                android:inputType="text"
                app:layout_constraintStart_toEndOf="@+id/iv_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0sdp"
        android:paddingTop="@dimen/_16sdp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/sh_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />
            <include layout="@layout/shimmer_user" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_error"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_16ssp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"/>

        <TextView
            android:id="@+id/tv_message_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/title_error"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_error"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/title_try_again"
            android:textAllCaps="false"
            android:background="@drawable/bg_rounded_all_primary"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_message_error"
            app:layout_constraintStart_toStartOf="@+id/tv_message_error"
            app:layout_constraintEnd_toEndOf="@+id/tv_message_error"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_margin="@dimen/_42sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/ic_search_user"
            android:contentDescription="@string/title_content_description"/>

        <TextView
            android:id="@+id/tv_search"
            android:text="@string/title_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_18ssp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_search_des"
            android:text="@string/title_search_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>